<resources>
    <string name="app_name">CoordinatorLayoutBehaviour</string>
    <string name="action_settings">Settings</string>
    <string name="demo_text">demo text</string>
    <string name="title_activity_launcher">Launcher</string>
    <string name="normal_appbarlayout">Normal Appbarlayout</string>
    <string name="title_activity_normal_action_bar">NormalActionBar</string>
    <string name="title_activity_normal_appbar_layout">NormalAppbarLayout</string>
    <string name="appbar_layout_with_tabs">appbar layout with tabs</string>
    <string name="title_activity_appbar_layout_with_tabs">AppbarLayoutWithTabs</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_collapsing_toolbar_layout">CollapsingToolbarLayout</string>
    <string name="collapsing_toolbar">Collapsing toolbar</string>
    <string name="title_activity_collapsing_toolbar_with_tabs">CollapsingToolbarWithTabs</string>
    <string name="collapsing_toolbar_with_tabs">Collapsing toolbar with Tabs</string>
    <string name="title_activity_coordinator_layout_behavior">CoordinatorLayoutBehavior</string>
    <string name="coordinator_behavior">Coordinator Behavior</string>
    <string name="name">name</string>
    <string name="tagline">tagline</string>
    <string name="name_2">name 2</string>
</resources>
