<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.sagar.android_projects.coordinatorlayoutbehaviour.Launcher"
    tools:showIn="@layout/activity_launcher">

    <Button
        android:id="@+id/normal_appbarlayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/normal_appbarlayout"
        app:layout_constraintBottom_toTopOf="@+id/appbarlayout_with_tabs"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/appbarlayout_with_tabs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appbar_layout_with_tabs"
        app:layout_constraintBottom_toTopOf="@+id/collapsing_toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/normal_appbarlayout"/>

    <Button
        android:id="@+id/collapsing_toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/collapsing_toolbar"
        app:layout_constraintBottom_toTopOf="@+id/collapsing_toolbar_with_tabs"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbarlayout_with_tabs"/>

    <Button
        android:id="@+id/collapsing_toolbar_with_tabs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/collapsing_toolbar_with_tabs"
        app:layout_constraintBottom_toTopOf="@+id/coordinator_layout_behavior"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/collapsing_toolbar"/>

    <Button
        android:id="@+id/coordinator_layout_behavior"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coordinator_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/collapsing_toolbar_with_tabs"/>

</android.support.constraint.ConstraintLayout>
